Admin: prevent out of bounds rendering of select elements in metaboxes by limiting their width

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -338,6 +338,10 @@ body.incassoos-post-view #postdivrich .inside {
 	max-width: 50%;
 }
 
+#misc-publishing-actions .publishing-notice select {
+	width: 100%;
+}
+
 #misc-publishing-actions .publishing-notice.require-confirmation,
 #misc-publishing-actions .publishing-notice.require-decryption-key {
 	max-width: none;
